Fix: fix sde url